--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-practice></app-practice>
-<!-- <app-linked-list></app-linked-list> -->
+<!-- <app-practice></app-practice> -->
+<app-linked-list></app-linked-list>
 <!-- <app-tree></app-tree> -->
 <router-outlet></router-outlet>
